# gspc-feynman

./: .dockerignore  .gitignore  .singularhistory  .singularhistory-17036.tmp  Dockerfile  README.md  bbfan.cpp  build.sh  check copy.lib  check.lib  deseria_seria.sh  dockersetup.txt  entrypoint.sh  feynman copy.lib  feynman.lib  feynman.py  feynman_copy.lib  feynman_example.lib  install copy.sh  install.sh  monitor copy 2.txt  monitor copy.txt  monitor.txt  onefile.lib  path.sh  path.txt  readme.txt  run copy.sh  run.sh  run_all.sh  screen  setup.sh  timing_33  token_read.sh  z_modular.txt
a_petrinet_function/: inst.sh  template copy.xpnet  template.xpnet  try  try.cpp  try.xpnet
cpp/: code.aux  code.fdb_latexmk  code.fls  code.tex  extract.cpp  extract_input  extract_input.cpp  generate  generate.cpp  generate_flint  generate_flint.cpp  generated.xpnet  generated_flint.xpnet  generated_flint_cpp.xpnet  generateweb.cpp  head.hpp  pnet.sh  tempCodeRunnerFile.cpp
example_dir/: .singularhistory  ComputeOneSector.ssi  OneSectorComputation.ssi  OneSectorComputation_gpi.ssi  ali.ssi  append_list.ssi  bonjour.ssi  computeGetRedIBPs_gpi.ssi  computeM1.ssi  computeM1_inside.ssi  computeManyIBP.ssi  computebaikovmatrix.ssi  example.sing  hallo.ssi  hello.ssi  hi.ssi  m2.ssi  nuit.ssi  prepareRedIBPs_gpi.ssi  size_computeSector.ssi  templategp copy 2.lib  templategp copy.lib  templategp.lib  templategspc.lib
example_dir/temp/: input  waas_1465648_1746455573225886431  waas_1465648_1746455573226672689  waas_1465648_1746455573227099531  waas_1465648_1746455575015458397  waas_1465648_1746455575022854217  waas_1465648_1746455575025275532  waas_1465654_1746455573225283926  waas_1465654_1746455573225905872  waas_1465654_1746455573226858876  waas_1465654_1746455573227346417  waas_1465654_1746455579767655704  waas_1465654_1746455579805261378  waas_1465654_1746455579817013024  waas_1465660_1746455572010310226  waas_1465660_1746455572012639304  waas_1465660_1746455572012785822  waas_1465660_1746455572012976167  waas_1465660_1746455572252579396  waas_1465660_1746455572255231524  waas_1465660_1746455572256419525  waas_1465660_1746455572256642885  waas_1465666_1746455572277256119  waas_1465666_1746455573179930886  waas_1465666_1746455573198555546  waas_1465666_1746455573204898212  waas_1465678_1746455572277263818  waas_1465678_1746455573054799595  waas_1465678_1746455573068713251  waas_1465678_1746455573073473201  waas_1465684_1746455572277443288  waas_1465684_1746455572652631386  waas_1465684_1746455572658055177  waas_1465684_1746455572660212352  waas_1465684_1746455573076221022  waas_1465684_1746455573077680101  waas_1465684_1746455573078172951  waas_1465684_1746455580849529656  waas_1465684_1746455580890627072  waas_1465684_1746455580903232377  (+25 more)
examples/: example copy.sing  example.lib  templategp copy 2.lib  templategp copy.lib  templategspc.lib
install_dir/libexec/workflow/: template.pnet
install_dir/share/examples/: README.md  example.lib  feynman_example.lib  templategp.lib  templategspc.lib
install_dir/shared/examples/: templategp.lib
template/: CMakeLists.txt
template/cmake/modules/: FindSingular.cmake
template/examples/: README.md  feynman_example.lib
template/interface/: template_interface.hpp
template/src/: CMakeLists.txt  installation copy.cpp  installation.cpp  installation.hpp copy.in  installation.hpp.in
template/template/: CMakeLists.txt  common_functions.hpp  feynman copy.cpp  feynman.cpp  feynman.hpp  generate  generate copy.cpp  generate data.cpp  generate.cpp  implementation copy 2.cpp  implementation copy 3.cpp  implementation copy.cpp  implementation.cpp  implementation_example.cpp  implementation_two_rings.cpp  input.cpp  matrix_pivot.cpp  singular_cpp.cpp  singular_functions.cpp  singular_functions.hpp  template.xpnet
template/workflow/: CMakeLists.txt  pnet.cpp  template copy 2.xpnet  template copy 5.xpnet  template copy 6.xpnet  template copy 7.xpnet  template copy 8.xpnet  template copy.xpnet  template flint.xpnet  template.xpnet  template_ohne_struct.xpnet  temps.xpnet  temps_cpp copy.xpnet  temps_cpp.xpnet
template/xnet/: template copy 2.xpnet  template copy 3.xpnet  template copy 4.xpnet  template copy 6.xpnet  template copy.xpnet  template.xpnet  template_kstd_kernel.xpnet  template_petri.xpnet  template_struct.xpnet
without_gpi/: CMakeLists.txt  example.lib  feynman copy.cpp  feynman.cpp  feynman.hpp  feynman.lib  implementation.cpp  input_token1_waas_84708_1744124298832087705  install.sh  run.sh  singular_functions copy.cpp  templategspc.lib  test_input.lib  test_singular.cpp
without_gpi/cmake/modules/: FindFLINT.cmake  FindGMP.cmake  FindSingular.cmake
z_xpnet/: .singularhistory  feynman_ibp.lib  feynman_ibp2.lib  flint_Q.cpp  flint_pivot.cpp  flint_to_singular.cpp  generate.cpp  getlabel.lib  onesector copy.cpp  onesector.cpp  pivot_singular.lib  setmat.lib
